--- a/question2/Cargo.toml
+++ b/question2/Cargo.toml
@@ -15,3 +15,5 @@ actix-web-actors = "4.3.1"
 sea-orm-migration = "1.1.2"
 tokio = "1.41.1"
 tokio-postgres = "0.7.12"
+chrono = "0.4.38"
+actix = "0.13.5"
